[package]
name = "entries-by-language"
version = "0.1.0"
authors = ["gbertilson <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dump_parser = { path = "../enwikt-dump-rs/dump_parser" }
parse_mediawiki_dump = "0.1"
unicase = "2.6"
smartstring = "0.2.3"
